[package]
name = "StackOverflowApiClone"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5.0"
async-trait = "0.1"
thiserror = "1.0"